--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
       - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
     steps:
       - checkout # check out the code in the project directory
-      - run: service docker start
+      - run: sudo su
       - run: cd ./node/nodeproject/myexp
       - run: npm install
       - run: cd /
