--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
       - checkout # check out the code in the project directory
       - run: cd ./node/nodeproject/myexp
       - run: npm install
-      - run: cd /
+      - run: cd ../../..
       - run: sudo docker-compose up -d # run the  command
