--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,6 @@ jobs:
       - run: npm install
       - run: cd ../../..
       - run: pwd
+      - run: docker-compose -v
+      - run: sudo ls
       - run: docker-compose up -d # run the  command
