--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,7 @@ jobs:
       - run: cd ../../..
       - run: pwd
       - run: docker-compose -v
-      - run: sudo -l
-      - run: docker-compose up -d # run the  command
+      - run: |
+          sudo su
+          docker-compose up -d
+#      - run: docker-compose up -d # run the  command
