--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,6 @@ jobs:
       - run: pwd
       - run: docker-compose -v
       - run: |
-          sudo su
+          sudo su &&
           docker-compose up -d
 #      - run: docker-compose up -d # run the  command
