--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,5 +10,6 @@ jobs:
       - run: cd ../../..
       - run: pwd
       - run: docker-compose -v
-      - run: sudo docker images
-      - run: sudo docker-compose up -d # run the  command
+      - run: su root
+      - run: docker images
+      - run: docker-compose up -d # run the  command
