--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,6 @@ jobs:
       - run: cd ../../..
       - run: pwd
       - run: docker-compose -v
-      - run: su root
+      - run: sudo su root
       - run: docker images
       - run: docker-compose up -d # run the  command
