--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
       - run: docker-compose -v
       - run: whoami
       - run: sudo gpasswd -a circleci docker
-      - run: shutdown -r now
+      - run: sudo service docker restart
       - run: docker images
       - run: docker-compose up -d # run the  command
